// Vitest Snapshot v1

exports[`Complex ProseMirror Node Conversions > Convert complex block to node 1`] = `
{
  "attrs": {
    "backgroundColor": "blue",
    "id": "4",
    "textColor": "yellow",
  },
  "content": [
    {
      "attrs": {
        "level": "2",
        "textAlignment": "right",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
            {
              "type": "underline",
            },
          ],
          "text": "Heading ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "italic",
            },
            {
              "type": "strike",
            },
          ],
          "text": "2",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "attrs": {
            "backgroundColor": "red",
            "id": "5",
            "textColor": "default",
          },
          "content": [
            {
              "attrs": {
                "textAlignment": "left",
              },
              "content": [
                {
                  "text": "Paragraph",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockContainer",
        },
        {
          "attrs": {
            "backgroundColor": "default",
            "id": "6",
            "textColor": "default",
          },
          "content": [
            {
              "attrs": {
                "textAlignment": "left",
              },
              "type": "bulletListItem",
            },
          ],
          "type": "blockContainer",
        },
      ],
      "type": "blockGroup",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Complex ProseMirror Node Conversions > Convert complex node to block 1`] = `
{
  "children": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph",
          "type": "text",
        },
      ],
      "id": "2",
      "props": {
        "backgroundColor": "red",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [],
      "id": "3",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "bulletListItem",
    },
  ],
  "content": [
    {
      "styles": {
        "bold": true,
        "underline": true,
      },
      "text": "Heading ",
      "type": "text",
    },
    {
      "styles": {
        "italic": true,
        "strike": true,
      },
      "text": "2",
      "type": "text",
    },
  ],
  "id": "1",
  "props": {
    "backgroundColor": "blue",
    "level": "2",
    "textAlignment": "right",
    "textColor": "yellow",
  },
  "type": "heading",
}
`;

exports[`Simple ProseMirror Node Conversions > Convert simple block to node 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Simple ProseMirror Node Conversions > Convert simple node to block 1`] = `
{
  "children": [],
  "content": [],
  "id": "0",
  "props": {
    "backgroundColor": "default",
    "textAlignment": "left",
    "textColor": "default",
  },
  "type": "paragraph",
}
`;

exports[`hard breaks > Convert a block with a hard break 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "Text2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`hard breaks > Convert a block with a hard break and different styles 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Text2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`hard breaks > Convert a block with a hard break at the end 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`hard breaks > Convert a block with a hard break at the start 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "type": "hardBreak",
        },
        {
          "text": "Text1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`hard breaks > Convert a block with a hard break between links 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website2.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`hard breaks > Convert a block with a hard break in a link 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`hard breaks > Convert a block with multiple hard breaks 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "Text2",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "Text3",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`hard breaks > Convert a block with only a hard break 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "type": "hardBreak",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`links > Convert a block with link 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Website",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`links > Convert two adjacent links in a block 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "4",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Website",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website2.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Website2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;
